librbd: missing journal state for flushing/restarting replay

Fixes: http://tracker.ceph.com/issues/16077
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit a7f5bc181c9cd677d39f95ad78134e0f85c22acb)